terraform_main_EC2/vpc.tf
resource "aws_vpc" "durga" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "durga_vpc"
    }
}
resource "aws_internet_gateway" "my_ig" {
    vpc_id = aws_vpc.durga.id
    tags = {
      Name = "durga_igw"
    }
}
resource "aws_subnet" "pub-sub01" {
   vpc_id = aws_vpc.durga.id
  cidr_block = "10.0.1.0/24"
    availability_zone = "ap-south-1a"
    map_public_ip_on_launch = true
    tags = {
      Name = "durga-pub-sub-1"
    }
}
resource "aws_subnet" "pub-sub02" {
    vpc_id = aws_vpc.durga.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "ap-south-1b"
    map_public_ip_on_launch = true
    tags = {
      Name = "durga-pub-sub-2"
    }
}
resource "aws_route_table" "my_rt" {
    vpc_id = aws_vpc.durga.id
    route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my_ig.id
    }
    tags = {
      Name = "durga-rt"
    }
}
resource "aws_route_table_association" "rt-association-01" {
    route_table_id = aws_route_table.my_rt.id
    subnet_id =  aws_subnet.pub-sub01.id
  
}
resource "aws_route_table_association" "rt-association-02" {
  route_table_id = aws_route_table.my_rt.id
  subnet_id = aws_subnet.pub-sub02.id
}
resource "aws_security_group" "security-group" {
  vpc_id      = aws_vpc.durga.id
  description = "Allowing Jenkins, Sonarqube, SSH Access"

  ingress = [
    for port in [22, 8080, 9000, 9090, 80] : {
      description      = "TLS from VPC"
      from_port        = port
      to_port          = port
      protocol         = "tcp"
      ipv6_cidr_blocks = ["::/0"]
      self             = false
      prefix_list_ids  = []
      security_groups  = []
      cidr_blocks      = ["0.0.0.0/0"]
    }
  ]

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "durga-sg"
  }
}
